--- a/safety_home/safety_home.service.temperatureSensorProvider/pom.xml
+++ b/safety_home/safety_home.service.temperatureSensorProvider/pom.xml
@@ -44,8 +44,13 @@
 		<dependency>
 			<groupId>org.universAAL.AALapplication</groupId>
 			<artifactId>ont.Safety</artifactId>
-			<version>1.0.5-SNAPSHOT</version>
-		</dependency>		
+			<version>1.1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.universAAL.remote</groupId>
+			<artifactId>ri.internetgateway</artifactId>
+			<version>1.3.1-SNAPSHOT</version>
+		</dependency>				
 	</dependencies>
     <build>
 		<plugins>
@@ -104,5 +109,5 @@
 				</releases>
 			</repository>
 		</repositories>
-		<version>1.0.5-SNAPSHOT</version>
+		<version>1.1.0-SNAPSHOT</version>
 </project>
