--- a/long_term_behav/drools.pom/pom.xml
+++ b/long_term_behav/drools.pom/pom.xml
@@ -17,7 +17,7 @@
 			<!--			<dependency>-->
 			<!--				<artifactId>ont.drools</artifactId>-->
 			<!--				<groupId>org.universaal.ontology</groupId>-->
-			<!--				<version>${project.version}</version>-->
+			<!--				<version>1.3.1-SNAPSHOT</version>-->
 			<!--			</dependency>-->
 		</dependencies>
 	</dependencyManagement>
