--- a/long_term_behav/drools.reasoner/pom.xml
+++ b/long_term_behav/drools.reasoner/pom.xml
@@ -42,7 +42,7 @@
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.drools</artifactId>
-			<version>D.0.1-SNAPSHOT</version>
+			<version>1.3.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.drools</groupId>
