--- a/long_term_behav/ltba.manager/pom.xml
+++ b/long_term_behav/ltba.manager/pom.xml
@@ -49,15 +49,15 @@
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.drools</artifactId>
-			<version>${project.version}</version>
+			<version>1.3.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.ltba</artifactId>
-			<version>${project.version}</version>
+			<version>1.3.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>org.universaal.aalapplication</groupId>
+			<groupId>org.universAAL.AALapplication</groupId>
 			<artifactId>ltba.ui</artifactId>
 			<version>${project.version}</version>
 		</dependency>
