--- a/long_term_behav/ltba.pom/pom.xml
+++ b/long_term_behav/ltba.pom/pom.xml
@@ -21,32 +21,32 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
-				<artifactId>ont.drools</artifactId>
-				<groupId>org.universaal.ontology</groupId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<artifactId>drools.reasoner</artifactId>
-				<groupId>org.universaal.aalapplication</groupId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
 				<groupId>org.universAAL.ontology</groupId>
 				<artifactId>ont.activityhub</artifactId>
 				<version>1.3.0</version>
 			</dependency>
 			<dependency>
 				<artifactId>ont.profile</artifactId>
-				<groupId>org.universaal.ontology</groupId>
+				<groupId>org.universAAL.ontology</groupId>
 				<version>1.3.0</version>
+			</dependency>
+			<dependency>
+				<artifactId>ont.drools</artifactId>
+				<groupId>org.universAAL.ontology</groupId>
+				<version>1.3.1-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>org.universAAL.ontology</groupId>
 				<artifactId>ont.ltba</artifactId>
+				<version>1.3.1-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<artifactId>drools.reasoner</artifactId>
+				<groupId>org.universAAL.AALapplication</groupId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.universAAL.aalapplication</groupId>
+				<groupId>org.universAAL.AALapplication</groupId>
 				<artifactId>ltba.ui</artifactId>
 				<version>${project.version}</version>
 			</dependency>
