--- a/long_term_behav/ltba.ui/pom.xml
+++ b/long_term_behav/ltba.ui/pom.xml
@@ -14,12 +14,12 @@
 	<dependencies>
 		<dependency>
 			<artifactId>ont.drools</artifactId>
-			<groupId>org.universaal.ontology</groupId>
-			<version>${project.version}</version>
+			<groupId>org.universAAL.ontology</groupId>
+			<version>1.3.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<artifactId>ont.profile</artifactId>
-			<groupId>org.universaal.ontology</groupId>
+			<groupId>org.universAAL.ontology</groupId>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
@@ -28,7 +28,7 @@
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.ltba</artifactId>
-			<version>${project.version}</version>
+			<version>1.3.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
