ont versions 1.3.1-SNAPSHOT not D.0.1-SNAPSHOT, svn ignores added, ltba.ui activator references updated (deployed on nexus 6.2.2013)

--- a/.gitignore
+++ b/.gitignore
@@ -123,6 +123,26 @@ help_when_out/hwo.servlet/.classpath
 help_when_out/hwo.servlet/.project
 help_when_out/hwo.servlet/.settings
 help_when_out/hwo.servlet/target
+long_term_behav/drools.pom/.project
+long_term_behav/drools.pom/.settings
+long_term_behav/drools.reasoner/.classpath
+long_term_behav/drools.reasoner/.project
+long_term_behav/drools.reasoner/.settings
+long_term_behav/drools.reasoner/target
+long_term_behav/ltba.manager/.classpath
+long_term_behav/ltba.manager/.project
+long_term_behav/ltba.manager/.settings
+long_term_behav/ltba.manager/target
+long_term_behav/ltba.pom/.project
+long_term_behav/ltba.pom/.settings
+long_term_behav/ltba.publisher/.classpath
+long_term_behav/ltba.publisher/.project
+long_term_behav/ltba.publisher/.settings
+long_term_behav/ltba.publisher/target
+long_term_behav/ltba.ui/.classpath
+long_term_behav/ltba.ui/.project
+long_term_behav/ltba.ui/.settings
+long_term_behav/ltba.ui/target
 medication/medication.manager.configuration/*.iml
 medication/medication.manager.configuration/target/classes
 medication/medication.manager.configuration/target/generated-sources
