add to svn ignore

--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,29 @@ personal_safety/smp.test-location.publisher/.classpath
 personal_safety/smp.test-location.publisher/.project
 personal_safety/smp.test-location.publisher/.settings
 personal_safety/smp.test-location.publisher/target
+safety_home/pom/.project
+safety_home/pom/.settings
+safety_home/safety_home.service.client/.classpath
+safety_home/safety_home.service.client/.project
+safety_home/safety_home.service.client/.settings
+safety_home/safety_home.service.client/target
+safety_home/safety_home.service.humiditySensorProvider/.classpath
+safety_home/safety_home.service.humiditySensorProvider/.project
+safety_home/safety_home.service.humiditySensorProvider/.settings
+safety_home/safety_home.service.humiditySensorProvider/target
+safety_home/safety_home.service.lightSensorProvider/.classpath
+safety_home/safety_home.service.lightSensorProvider/.project
+safety_home/safety_home.service.lightSensorProvider/.settings
+safety_home/safety_home.service.lightSensorProvider/target
+safety_home/safety_home.service.motionSensorProvider/.classpath
+safety_home/safety_home.service.motionSensorProvider/.project
+safety_home/safety_home.service.motionSensorProvider/.settings
+safety_home/safety_home.service.motionSensorProvider/target
+safety_home/safety_home.service.server/.classpath
+safety_home/safety_home.service.server/.project
+safety_home/safety_home.service.server/.settings
+safety_home/safety_home.service.server/target
+safety_home/safety_home.service.smartCardProvider/.classpath
+safety_home/safety_home.service.smartCardProvider/.project
+safety_home/safety_home.service.smartCardProvider/.settings
+safety_home/safety_home.service.smartCardProvider/target
