--- a/medication/medication.manager.pom/pom.xml
+++ b/medication/medication.manager.pom/pom.xml
@@ -63,6 +63,6 @@
     <module>../medication.missing.services.simulation</module>
     <module>../medication.manager.ui</module>
     <!--  <module>../medication.manager.integration.tests</module> -->
-    <module>../medication.manager.ui.runner</module>
+    <!--<module>../medication.manager.ui.runner</module>-->
   </modules>
 </project>
