--- a/medication/medication.manager.ui/pom.xml
+++ b/medication/medication.manager.ui/pom.xml
@@ -19,6 +19,13 @@
       <artifactId>ont.medication</artifactId>
       <version>1.3.1-SNAPSHOT</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.universAAL.AALapplication</groupId>
+      <artifactId>medication.manager.persistence</artifactId>
+      <version>D.0.1-SNAPSHOT</version>
+    </dependency>
+
     <dependency>
       <groupId>org.universAAL.middleware</groupId>
       <artifactId>mw.bus.ui.core</artifactId>
@@ -43,7 +50,7 @@
             <Export-Package>org.universAAL.AALapplication.medication_manager.ui.*</Export-Package>
           </instructions>
         </configuration>
-      </plugin>      
-    </plugins>    
+      </plugin>
+    </plugins>
   </build>
 </project>
