--- a/medication/medication.missing.services.simulation/pom.xml
+++ b/medication/medication.missing.services.simulation/pom.xml
@@ -20,6 +20,12 @@
       <version>1.3.1-SNAPSHOT</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.universAAL.AALapplication</groupId>
+      <artifactId>medication.manager.persistence</artifactId>
+      <version>D.0.1-SNAPSHOT</version>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -40,6 +46,6 @@
           </instructions>
         </configuration>
       </plugin>
-     </plugins>
+    </plugins>
   </build>
 </project>
