--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+aal_eficiency/AALfficiency.test/target
 agenda/agenda.client/.classpath
 agenda/agenda.client/.project
 agenda/agenda.client/.settings
