--- a/ontologies/ont.safety/pom.xml
+++ b/ontologies/ont.safety/pom.xml
@@ -56,11 +56,11 @@
 				<configuration>
 					<instructions>
 						<Bundle-Name>${project.name}</Bundle-Name>
-						<Bundle-Activator>org.universAAL.ontology.SafetyActivator</Bundle-Activator>
+						<!-- <Bundle-Activator>org.universAAL.ontology.SafetyActivator</Bundle-Activator>-->
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
 						<Export-Package>org.universAAL.ontology.Safety</Export-Package>
-            			<Private-Package>org.universAAL.ontology</Private-Package>
+            			<Private-Package>org.universAAL.ontology;-split-package:=first</Private-Package>
 					</instructions>
 				</configuration>
 			</plugin>
