--- a/safety_home/safety_home.service.client/pom.xml
+++ b/safety_home/safety_home.service.client/pom.xml
@@ -1,56 +1,29 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-
-	<parent>
-		<groupId>org.universAAL.AALapplication</groupId>
-		<artifactId>safety_home.pom</artifactId>
-		<version>D.0.1-SNAPSHOT</version>
-		<relativePath>../pom/</relativePath>
-	</parent>
-
-	<artifactId>safety_home.service.client</artifactId>
-	<name>Safety at Home Client</name>
-	<version>D.0.1-SNAPSHOT</version>
-	<description>Safety at Home Client Service</description>
-	<packaging>bundle</packaging>
-	<inceptionYear>2012</inceptionYear>
-	<dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+ 
+   <parent>
+  	<groupId>org.universAAL.AALapplication</groupId>
+  	<artifactId>safety.pom</artifactId>
+  	<version>D.0.1-SNAPSHOT</version>
+  	<relativePath>../safety.pom/</relativePath>
+  </parent>
+ 
+  <artifactId>safety_home.service.client</artifactId>
+  <name>Safety at Home Client</name>
+  <description>Safety at Home Client Service</description>
+  <packaging>bundle</packaging>
+  <inceptionYear>2012</inceptionYear>  
+  <licenses>
+		<license>
+			<name>The Apache Software License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+  </licenses>
+    <dependencies>
 		<dependency>
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.osgi.core</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.data.representation.osgi</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.model.osgi</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.container.xfaces.osgi</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.container.osgi</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.context.osgi</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.service.osgi</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.universAAL.ontology</groupId>
-			<artifactId>ont.profile</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.universAAL.ontology</groupId>
-			<artifactId>ont.phWorld</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
@@ -58,11 +31,15 @@
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
-			<artifactId>ont.Safety</artifactId>
+			<artifactId>ont.safety</artifactId>
 			<version>1.3.1-SNAPSHOT</version>
+		</dependency>		
+		<dependency>
+			<groupId>org.universAAL.ontology</groupId>
+			<artifactId>ont.profile</artifactId>
 		</dependency>
 	</dependencies>
-	<build>
+    <build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.felix</groupId>
@@ -71,12 +48,74 @@
 				<configuration>
 					<instructions>
 						<Bundle-Name>${project.name}</Bundle-Name>
-						<Bundle-Activator>org.universAAL.AALapplication.safety_home.service.client.Activator</Bundle-Activator>
+						<Bundle-Activator>org.universAAL.AALapplication.safety_home.service.uiclient.osgi.Activator</Bundle-Activator>
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+						<Private-Package>org.universAAL.AALapplication.safety_home.service.uiclient</Private-Package>
 					</instructions>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
+	<repositories>
+		<repository>
+			<id>central</id>
+			<name>Central Maven Repository</name>
+			<url>http://repo1.maven.org/maven2</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+		<repository>
+			<id>apache-snapshots</id>
+			<name>Apache Snapshots</name>
+			<url>http://people.apache.org/repo/m2-snapshot-repository</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<snapshots>
+				<updatePolicy>daily</updatePolicy>
+			</snapshots>
+		</repository>
+		<repository>
+			<id>uaal</id>
+			<name>universAAL Repositories</name>
+			<url>http://depot.universaal.org/maven-repo/releases/</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+		<repository>
+			<id>uaal-snapshots</id>
+			<name>universAAL Snapshot Repositories</name>
+			<url>http://depot.universaal.org/maven-repo/snapshots/</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+		</repository>
+	</repositories>	
+	<profiles>
+		<profile>
+			<id>uAAL-Runtime</id>
+			<dependencies>
+				<dependency>
+					<groupId>org.universAAL.AALapplication</groupId>
+					<artifactId>safety_home.service.server</artifactId>
+					<version>1.1.0-SNAPSHOT</version>
+				</dependency>
+				<dependency>
+					<groupId>org.universAAL.ui</groupId>
+					<artifactId>ui.dm</artifactId>
+				</dependency>
+				<dependency>
+					<groupId>org.universAAL.ui</groupId>
+					<artifactId>ui.handler.gui.swing</artifactId>
+				</dependency>
+				<dependency>
+					<groupId>org.universAAL.ui</groupId>
+					<artifactId>ui.dm.mobile</artifactId>
+				</dependency>
+			</dependencies>
+		</profile>
+	</profiles>
 </project>
