--- a/safety_home/safety_home.service.smartCardProvider/pom.xml
+++ b/safety_home/safety_home.service.smartCardProvider/pom.xml
@@ -3,9 +3,9 @@
  
   <parent>
   	<groupId>org.universAAL.AALapplication</groupId>
-  	<artifactId>safety_home.pom</artifactId>
-  	<version>C.0.5-SNAPSHOT</version>
-  	<relativePath>../pom/</relativePath>
+  	<artifactId>safety.pom</artifactId>
+  	<version>D.0.1-SNAPSHOT</version>
+  	<relativePath>../safety.pom/</relativePath>
   </parent>
  
   <artifactId>safety_home.service.smartCardProvider</artifactId>
@@ -24,28 +24,22 @@
 		<dependency>
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.osgi.core</artifactId>
-			</dependency>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.data.representation.osgi</artifactId>
-			</dependency>
-		<dependency>
-			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.context.osgi</artifactId>
-			</dependency>
-		<dependency>
-			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.service.osgi</artifactId>
-			</dependency>
+			<artifactId>mw.composite</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
-			<artifactId>ont.phWorld</artifactId>
-			</dependency>
-		<dependency>
-			<groupId>org.universAAL.AALapplication</groupId>
-			<artifactId>ont.Safety</artifactId>
-			<version>1.1.0-SNAPSHOT</version>
+			<artifactId>ont.safety</artifactId>
+			<version>1.3.1-SNAPSHOT</version>
 		</dependency>		
+		<dependency>
+      		<groupId>org.apache.derby</groupId>
+      		<artifactId>derby</artifactId>
+      		<version>10.7.1.1</version>
+  		</dependency>		
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
@@ -67,6 +61,7 @@
 						<Export-Package>
 						org.universAAL.AALapplication.safety_home.service.smartCardProvider, org.universAAL.AALapplication.db.*
 						</Export-Package> 
+						<Import-Package>org.apache.derby.jdbc,*</Import-Package>
 					</instructions>
 				</configuration>
 			</plugin>
@@ -109,5 +104,4 @@
 				</releases>
 			</repository>
 		</repositories>
-		<version>1.1.0-SNAPSHOT</version>
 </project>
