--- a/safety_home/safety_home.service.temperatureSensorProvider/pom.xml
+++ b/safety_home/safety_home.service.temperatureSensorProvider/pom.xml
@@ -3,9 +3,9 @@
   
   <parent>
   	<groupId>org.universAAL.AALapplication</groupId>
-  	<artifactId>safety_home.pom</artifactId>
-  	<version>C.0.5-SNAPSHOT</version>
-  	<relativePath>../pom/</relativePath>
+  	<artifactId>safety.pom</artifactId>
+  	<version>D.0.1-SNAPSHOT</version>
+  	<relativePath>../safety.pom/</relativePath>
   </parent>
   
   <artifactId>safety_home.service.temperatureSensorProvider</artifactId>
@@ -24,27 +24,15 @@
 		<dependency>
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.osgi.core</artifactId>
-			</dependency>
+		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.data.representation.osgi</artifactId>
-			</dependency>
-		<dependency>
-			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.context.osgi</artifactId>
-			</dependency>
-		<dependency>
-			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.service.osgi</artifactId>
-			</dependency>
+			<artifactId>mw.composite</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
-			<artifactId>ont.phWorld</artifactId>
-			</dependency>
-		<dependency>
-			<groupId>org.universAAL.AALapplication</groupId>
-			<artifactId>ont.Safety</artifactId>
-			<version>1.1.0-SNAPSHOT</version>
+			<artifactId>ont.safety</artifactId>
+			<version>1.3.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.remote</groupId>
@@ -109,5 +97,4 @@
 				</releases>
 			</repository>
 		</repositories>
-		<version>1.1.0-SNAPSHOT</version>
 </project>
