--- a/safety_home/safety_home.service.client/pom.xml
+++ b/safety_home/safety_home.service.client/pom.xml
@@ -12,7 +12,7 @@
   <name>Safety at Home Client</name>
   <description>Safety at Home Client Service</description>
   <packaging>bundle</packaging>
-  <inceptionYear>2012</inceptionYear>  
+  <inceptionYear>2011</inceptionYear>  
   <licenses>
 		<license>
 			<name>The Apache Software License, Version 2.0</name>
@@ -57,43 +57,6 @@
 			</plugin>
 		</plugins>
 	</build>
-	<repositories>
-		<repository>
-			<id>central</id>
-			<name>Central Maven Repository</name>
-			<url>http://repo1.maven.org/maven2</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>apache-snapshots</id>
-			<name>Apache Snapshots</name>
-			<url>http://people.apache.org/repo/m2-snapshot-repository</url>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-			<snapshots>
-				<updatePolicy>daily</updatePolicy>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>uaal</id>
-			<name>universAAL Repositories</name>
-			<url>http://depot.universaal.org/maven-repo/releases/</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>uaal-snapshots</id>
-			<name>universAAL Snapshot Repositories</name>
-			<url>http://depot.universaal.org/maven-repo/snapshots/</url>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-		</repository>
-	</repositories>	
 	<profiles>
 		<profile>
 			<id>uAAL-Runtime</id>
@@ -101,7 +64,6 @@
 				<dependency>
 					<groupId>org.universAAL.AALapplication</groupId>
 					<artifactId>safety_home.service.server</artifactId>
-					<version>1.1.0-SNAPSHOT</version>
 				</dependency>
 				<dependency>
 					<groupId>org.universAAL.ui</groupId>
@@ -113,7 +75,11 @@
 				</dependency>
 				<dependency>
 					<groupId>org.universAAL.ui</groupId>
-					<artifactId>ui.dm.mobile</artifactId>
+					<artifactId>ui.handler.gui.swing.classicLAF</artifactId>
+				</dependency>
+				<dependency>
+					<groupId>org.universAAL.ui</groupId>
+					<artifactId>ui.handler.gui.swing.bluesteelLAF</artifactId>
 				</dependency>
 			</dependencies>
 		</profile>
