--- a/medication/medication.manager.ui/pom.xml
+++ b/medication/medication.manager.ui/pom.xml
@@ -51,6 +51,45 @@
           </instructions>
         </configuration>
       </plugin>
+
+      <plugin>
+
+        <groupId>org.apache.maven.plugins</groupId>
+
+        <artifactId>maven-antrun-plugin</artifactId>
+
+        <version>1.7</version>
+
+        <executions>
+
+          <execution>
+
+            <id>copy</id>
+
+            <phase>install</phase>
+
+            <configuration>
+
+              <target name="copy file">
+
+                <copy file="${project.basedir}/target/${project.artifactId}-${project.version}.jar"
+                      tofile="D:\universAAL\svn\protoRev.runner\runner\bundles\medication.manager.ui_1.3.0.jar"/>
+
+              </target>
+
+            </configuration>
+
+            <goals>
+
+              <goal>run</goal>
+
+            </goals>
+
+          </execution>
+
+        </executions>
+
+      </plugin>
     </plugins>
   </build>
 </project>
