UC01.1: implemented timeout. If the assisted person didn't take action with the ReminderDialog in the predefine amount of time then is published MissedIntakeEvent

--- a/medication/medication.manager.service/pom.xml
+++ b/medication/medication.manager.service/pom.xml
@@ -50,6 +50,7 @@
             <Bundle-Description>${project.description}</Bundle-Description>
             <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
             <Private-Package>org.universAAL.AALapplication.medication_manager.impl</Private-Package>
+            <Export-Package>org.universAAL.AALapplication.medication_manager.providers</Export-Package>
           </instructions>
         </configuration>
       </plugin>
