--- a/new_services.pom/pom.xml
+++ b/new_services.pom/pom.xml
@@ -10,7 +10,7 @@
 
 	<groupId>org.universAAL.AALapplication</groupId>
 	<artifactId>new_services.pom</artifactId>
-	<version>D.0</version>
+	<version>D.1</version>
 	<packaging>pom</packaging>
 	<name>Parent POM for all AAL services</name>
 	<description>Contains repository, deployment, and other info for all AALapplications</description>
@@ -61,7 +61,8 @@
 			<dependency>
 				<groupId>org.universAAL.ontology</groupId>
 				<artifactId>ont.pom</artifactId>
-				<version>${platform.version}</version>
+<!-- 				<version>${platform.version}</version> -->
+				<version>1.3.1-SNAPSHOT</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
