tag for ontologies.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 new_services.pom/.project
 new_services.pom/.settings
+ontologies/ont.pom/.project
+ontologies/ont.pom/.settings
+ontologies/ont.pom/target
