--- a/ontologies/ont.message/pom.xml
+++ b/ontologies/ont.message/pom.xml
@@ -46,7 +46,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
-			<artifactId>ont.health</artifactId>
+			<artifactId>ont.profile.health</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>commons-collections</groupId>
