deleted health core ontologies (moved to ontologies official repo), updated version of wp4-ontologies updated import in new_services, updated dependencies.

--- a/ont.message/pom.xml
+++ b/ont.message/pom.xml
@@ -46,7 +46,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
-			<artifactId>ont.health</artifactId>
+			<artifactId>ont.profile.health</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>commons-collections</groupId>
