--- a/health/health.performedSession.manager/pom.xml
+++ b/health/health.performedSession.manager/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>health.pom</artifactId>
 		<groupId>org.universAAL.AALapplication</groupId>
-		<version>D.0.1-SNAPSHOT</version>
+		<version>D.1.1-SNAPSHOT</version>
 		<relativePath>../health.pom</relativePath>
 	</parent>
 
@@ -22,7 +22,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
-			<artifactId>ont.health</artifactId>
+			<artifactId>ont.profile.health</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
