--- a/health/health.profile.manager/pom.xml
+++ b/health/health.profile.manager/pom.xml
@@ -5,7 +5,7 @@
   <parent>
   	<groupId>org.universAAL.AALapplication</groupId>
   	<artifactId>health.pom</artifactId>
-  	<version>D.0.1-SNAPSHOT</version>
+  	<version>D.1.1-SNAPSHOT</version>
   	<relativePath>../health.pom</relativePath>
   </parent>
 
@@ -27,7 +27,7 @@
   	</dependency>   		
   	<dependency>
   		<groupId>org.universAAL.ontology</groupId>
-  		<artifactId>ont.health</artifactId>
+  		<artifactId>ont.profile.health</artifactId>
   	</dependency>  	 	
   	<dependency>
   		<groupId>org.universAAL.middleware</groupId>
