--- a/ontologies/ont.medication/pom.xml
+++ b/ontologies/ont.medication/pom.xml
@@ -51,10 +51,9 @@
     </dependency>
     <dependency>
       <groupId>org.universAAL.ontology</groupId>
-      <artifactId>ont.health</artifactId>
-      <version>1.3.1-SNAPSHOT</version>
+      <artifactId>ont.profile.health</artifactId>
+      <version>1.3.2-SNAPSHOT</version>
     </dependency>
-
   </dependencies>
 
   <build>
@@ -74,45 +73,6 @@
           </instructions>
         </configuration>
       </plugin>
-
-      <plugin>
-
-              <groupId>org.apache.maven.plugins</groupId>
-
-              <artifactId>maven-antrun-plugin</artifactId>
-
-              <version>1.7</version>
-
-              <executions>
-
-                <execution>
-
-                  <id>copy</id>
-
-                  <phase>install</phase>
-
-                  <configuration>
-
-                    <target name="copy file">
-
-                      <copy file="${project.basedir}/target/${project.artifactId}-${project.version}.jar"
-                            tofile="D:\universAAL\svn\protoRev.runner\runner\bundles\ont.medication_1.3.0.jar"/>
-
-                    </target>
-
-                  </configuration>
-
-                  <goals>
-
-                    <goal>run</goal>
-
-                  </goals>
-
-                </execution>
-
-              </executions>
-
-            </plugin>
     </plugins>
   </build>
 </project>
