--- a/medication/medication.missing.services.simulation/pom.xml
+++ b/medication/medication.missing.services.simulation/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.universAAL.AALapplication</groupId>
-    <version>D.0.1-SNAPSHOT</version>
+    <version>D.1-SNAPSHOT</version>
     <artifactId>medication.manager.pom</artifactId>
     <relativePath>../medication.manager.pom</relativePath>
   </parent>
@@ -17,13 +17,13 @@
     <dependency>
       <groupId>org.universAAL.ontology</groupId>
       <artifactId>ont.medication</artifactId>
-      <version>1.3.1-SNAPSHOT</version>
+      <version>1.3.2-SNAPSHOT</version>
     </dependency>
 
     <dependency>
       <groupId>org.universAAL.AALapplication</groupId>
       <artifactId>medication.manager.persistence</artifactId>
-      <version>D.0.1-SNAPSHOT</version>
+      <version>D.1-SNAPSHOT</version>
     </dependency>
 
   </dependencies>
@@ -42,48 +42,11 @@
             <Bundle-Description>${project.description}</Bundle-Description>
             <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
             <Private-Package>org.universAAL.AALapplication.medication_manager.simulation.impl</Private-Package>
-            <Export-Package>org.universAAL.AALapplication.medication_manager.simulation</Export-Package>
+            <Export-Package>org.universAAL.AALapplication.medication_manager.simulation.export</Export-Package>
           </instructions>
         </configuration>
       </plugin>
-      <plugin>
 
-        <groupId>org.apache.maven.plugins</groupId>
-
-        <artifactId>maven-antrun-plugin</artifactId>
-
-        <version>1.7</version>
-
-        <executions>
-
-          <execution>
-
-            <id>copy</id>
-
-            <phase>install</phase>
-
-            <configuration>
-
-              <target name="copy file">
-
-                <copy file="${project.basedir}/target/${project.artifactId}-${project.version}.jar"
-                      tofile="D:\universAAL\svn\protoRev.runner\runner\bundles\medication.missing.services.simulation_1.3.0.jar"/>
-
-              </target>
-
-            </configuration>
-
-            <goals>
-
-              <goal>run</goal>
-
-            </goals>
-
-          </execution>
-
-        </executions>
-
-      </plugin>
     </plugins>
   </build>
 </project>
