--- a/.gitattributes
+++ b/.gitattributes
@@ -2834,6 +2834,7 @@ long_term_behav/ltba.manager/LTBA_Demo_B.0.1_with_reasoner_UI_Services_DIRTYDRAF
 long_term_behav/ltba.manager/MITX.txt -text
 long_term_behav/ltba.manager/NOTICE.txt -text
 long_term_behav/ltba.manager/pom.xml -text
+long_term_behav/ltba.nomhad.gateway/pom.xml -text
 long_term_behav/ltba.pom/pom.xml -text
 long_term_behav/ltba.publisher/ASL2.0.txt -text
 long_term_behav/ltba.publisher/LTBA_Publisher_B.0.1.launch -text
