--- a/medication/medication.manager.configuration/src/main/resources/medication.properties
+++ b/medication/medication.manager.configuration/src/main/resources/medication.properties
@@ -1,2 +1,5 @@
 medication.reminder.timeout=10
 medication.intake.interval=1
+http.session.expire.timeout.in.minutes=60
+http.session.timer.checker.interval.in.minutes=5
+debug.write.file=off
