Implemented mocked handling of the new prescription as option (property). Started implementation of the real call the corresponding Health Manager Service

--- a/medication/medication.manager.configuration/src/main/resources/medication.properties
+++ b/medication/medication.manager.configuration/src/main/resources/medication.properties
@@ -3,3 +3,4 @@ medication.intake.interval=1
 http.session.expire.timeout.in.minutes=60
 http.session.timer.checker.interval.in.minutes=5
 debug.write.file=off
+health.treatment.service.mocked=on
