Updated database tables, queries, entities and so on to reflect changes in the database tables. Added properties table

--- a/medication/medication.manager.configuration/src/main/resources/medication.properties
+++ b/medication/medication.manager.configuration/src/main/resources/medication.properties
@@ -3,4 +3,5 @@ medication.intake.interval=1
 http.session.expire.timeout.in.minutes=60
 http.session.timer.checker.interval.in.minutes=5
 debug.write.file=off
-health.treatment.service.mocked=off
+health.treatment.service.mocked=on
+load.prescriptionsdtos=off
