Risky refactoring : extract another module (medication.manager.servlet.ui.base) from medication.manager.servlet.ui module in order to be used in the new upcoming configuration servlet module.  Other refactoring and improvements

--- a/medication/medication.manager.configuration/src/main/resources/medication.properties
+++ b/medication/medication.manager.configuration/src/main/resources/medication.properties
@@ -2,6 +2,6 @@ medication.reminder.timeout=10
 medication.intake.interval=1
 http.session.expire.timeout.in.minutes=60
 http.session.timer.checker.interval.in.minutes=5
-debug.write.file=off
+debug.write.file=on
 health.treatment.service.mocked=on
 load.prescriptionsdtos=off
