--- a/medication/medication.manager.servlet.ui/pom.xml
+++ b/medication/medication.manager.servlet.ui/pom.xml
@@ -35,6 +35,12 @@
 
     <dependency>
       <groupId>org.universAAL.AALapplication</groupId>
+      <artifactId>medication.manager.servlet.ui.base</artifactId>
+      <version>D.1-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.universAAL.AALapplication</groupId>
       <artifactId>medication.missing.services.simulation</artifactId>
       <version>D.1-SNAPSHOT</version>
     </dependency>
