Risky refactoring : extract another module (medication.manager.servlet.ui.base) from medication.manager.servlet.ui module in order to be used in the new upcoming configuration servlet module.  Other refactoring and improvements

--- a/.gitignore
+++ b/.gitignore
@@ -135,11 +135,21 @@ medication/medication.manager.persistence/*.iml
 medication/medication.manager.persistence/target
 medication/medication.manager.pom/*.idea
 medication/medication.manager.pom/*.iml
+medication/medication.manager.pom/.clover
+medication/medication.manager.pom/.project
+medication/medication.manager.pom/.settings
+medication/medication.manager.pom/atlassian-ide-plugin.xml
+medication/medication.manager.pom/medication.manager.pom.ipr
+medication/medication.manager.pom/out
 medication/medication.manager.service/*.iml
+medication/medication.manager.service/.project
+medication/medication.manager.service/.settings
 medication/medication.manager.service/target
 medication/medication.manager.servlet.ui/*.iml
 medication/medication.manager.servlet.ui/target
 medication/medication.manager.shell.commands/*.iml
+medication/medication.manager.shell.commands/.project
+medication/medication.manager.shell.commands/.settings
 medication/medication.manager.shell.commands/target
 medication/medication.manager.ui.runner/*.iml
 medication/medication.manager.ui.runner/runner/bundles
@@ -148,8 +158,12 @@ medication/medication.manager.ui.runner/runner/felix/cache
 medication/medication.manager.ui.runner/runner/log
 medication/medication.manager.ui.runner/target
 medication/medication.manager.ui/*.iml
+medication/medication.manager.ui/.project
+medication/medication.manager.ui/.settings
 medication/medication.manager.ui/target
 medication/medication.missing.services.simulation/*.iml
+medication/medication.missing.services.simulation/.project
+medication/medication.missing.services.simulation/.settings
 medication/medication.missing.services.simulation/target
 new_services.pom/.project
 new_services.pom/.settings
