Risky refactoring : extract another module (medication.manager.servlet.ui.base) from medication.manager.servlet.ui module in order to be used in the new upcoming configuration servlet module.  Other refactoring and improvements

--- a/.gitignore
+++ b/.gitignore
@@ -145,6 +145,8 @@ medication/medication.manager.service/*.iml
 medication/medication.manager.service/.project
 medication/medication.manager.service/.settings
 medication/medication.manager.service/target
+medication/medication.manager.servlet.ui.base/*.iml
+medication/medication.manager.servlet.ui.base/target
 medication/medication.manager.servlet.ui/*.iml
 medication/medication.manager.servlet.ui/target
 medication/medication.manager.shell.commands/*.iml
