Risky refactoring : created new module medication.manager.servlet.ui.configuration and started development and other refactoring and improvements

--- a/medication/medication.manager.pom/pom.xml
+++ b/medication/medication.manager.pom/pom.xml
@@ -64,6 +64,7 @@
     <module>../medication.manager.ui</module>
     <module>../medication.manager.servlet.ui</module>
     <module>../medication.manager.servlet.ui.base</module>
+    <module>../medication.manager.servlet.ui.configuration</module>
     <!--  <module>../medication.manager.integration.tests</module> -->
     <!--<module>../medication.manager.ui.runner</module>-->
   </modules>
