--- a/new_services.pom/pom.xml
+++ b/new_services.pom/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.universAAL</groupId>
 		<artifactId>uAAL.pom</artifactId>
-		<version>1.3.2-SNAPSHOT</version>
+		<version>1.3.0</version>
 	</parent>
 
 	<groupId>org.universAAL.AALapplication</groupId>
@@ -31,7 +31,7 @@
 		<maven.compile.source>1.5</maven.compile.source>
 		<maven.compile.target>1.5</maven.compile.target>
 		<gforge.project.name>new_services</gforge.project.name>
-		<platform.version>1.3.2-SNAPSHOT</platform.version>
+		<platform.version>1.3.0</platform.version>
 		<service.name.svn></service.name.svn>
 	</properties>
 
@@ -61,7 +61,8 @@
 			<dependency>
 				<groupId>org.universAAL.ontology</groupId>
 				<artifactId>ont.pom</artifactId>
-				<version>${platform.version}</version>
+<!-- 				<version>${platform.version}</version> -->
+				<version>1.3.1-SNAPSHOT</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -82,7 +83,7 @@
 			<dependency>
 				<groupId>org.universAAL.ontology.services</groupId>
 				<artifactId>ont.pom</artifactId>
-				<version>1.3.1-SNAPSHOT</version>
+				<version>1.3.2-SNAPSHOT</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
