Implemented: To add prefix to the property names: medication.manager fixed bug with the shortage alert

--- a/medication/medication.manager.configuration/src/main/resources/medication.properties
+++ b/medication/medication.manager.configuration/src/main/resources/medication.properties
@@ -1,7 +1,7 @@
-medication.reminder.timeout=10
-medication.intake.interval=1
-http.session.expire.timeout.in.minutes=60
-http.session.timer.checker.interval.in.minutes=5
-debug.write.file=on
-health.treatment.service.mocked=on
-load.prescriptionsdtos=off
+medication.manager.reminder.timeout=10
+medication.manager.intake.interval=1
+medication.manager.http.session.expire.timeout.in.minutes=60
+medication.manager.http.session.timer.checker.interval.in.minutes=5
+medication.manager.debug.write.file=on
+medication.manager.health.treatment.service.mocked=on
+medication.manager.load.prescriptionsdtos=off
