Updated the status of the input files required by several usecase under the medication_manager configuration directory (in the runner)

--- a/.gitattributes
+++ b/.gitattributes
@@ -2864,6 +2864,8 @@ medication/medication.manager.configuration/src/main/java/org/universAAL/AALappl
 medication/medication.manager.configuration/src/main/resources/CreateTables.sql -text
 medication/medication.manager.configuration/src/main/resources/DataLoad.sql -text
 medication/medication.manager.configuration/src/main/resources/medication.properties -text
+medication/medication.manager.configuration/src/main/resources/medication_manager/dispenser_instructions/instructions_1.txt -text
+medication/medication.manager.configuration/src/main/resources/medication_manager/dispenser_instructions/instructions_2.txt -text
 medication/medication.manager.configuration/src/main/resources/medication_manager/prescriptions/1.xml -text
 medication/medication.manager.configuration/src/main/resources/medication_manager/prescriptions/2.xml -text
 medication/medication.manager.integration.tests/artifact.composite -text
