--- a/medication/medication.manager.pom/pom.xml
+++ b/medication/medication.manager.pom/pom.xml
@@ -65,6 +65,7 @@
     <module>../medication.manager.servlet.ui</module>
     <module>../medication.manager.servlet.ui.base</module>
     <module>../medication.manager.servlet.ui.configuration</module>
+    <module>../medication.manager.event.issuer</module>
     <!--  <module>../medication.manager.integration.tests</module> -->
     <!--<module>../medication.manager.ui.runner</module>-->
   </modules>
