--- a/ontologies/ont.nutrition/pom.xml
+++ b/ontologies/ont.nutrition/pom.xml
@@ -43,6 +43,10 @@
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.phWorld</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.universAAL.ontology</groupId>
+			<artifactId>ont.profile</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
