--- a/.gitignore
+++ b/.gitignore
@@ -215,6 +215,9 @@ ontologies/ont.message/.classpath
 ontologies/ont.message/.project
 ontologies/ont.message/.settings
 ontologies/ont.message/target
+ontologies/ont.nutrition/.classpath
+ontologies/ont.nutrition/.project
+ontologies/ont.nutrition/.settings
 ontologies/ont.nutrition/target
 ontologies/ont.pom/.project
 ontologies/ont.pom/.settings
