agenda runner config folder update

--- a/agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/renderer.properties
+++ b/agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/renderer.properties
@@ -8,3 +8,7 @@ queued.forms=false
 #do not forget to include bundle in running conf (e.g. wrap:mvn:org.universAAL.ui/ui.handler.gui.swing.bluesteelLAF/1.2.2-SNAPSHOT)
 LookandFeel.package=org.universAAL.ui.gui.swing.bluesteelLAF
 demo.mode=true
+#will disable fullscreen mode
+ui.handler.gui.swing.bluesteelLAF.windowed=true
+# a default user to disable login where username=saied or http://mi.company.com/users.owl#saied
+default.user=saied
