updated to 1.3.2-SNAPSHOT

--- a/nutritional/nutritional.pom/pom.xml
+++ b/nutritional/nutritional.pom/pom.xml
@@ -7,12 +7,12 @@
 	<parent>
 		<artifactId>new_services.pom</artifactId>
 		<groupId>org.universAAL.AALapplication</groupId>
-		<version>D.0</version>
+		<version>D.2</version>
 		<relativePath>../../new_services.pom</relativePath>
 	</parent>
 
 	<artifactId>nutritional.pom</artifactId>
-	<version>D.0.1-SNAPSHOT</version>
+	<version>D.2.1-SNAPSHOT</version>
 	<name>Nutritional Advisor AAL Service</name>
 	<packaging>pom</packaging>
 
@@ -30,7 +30,7 @@
 	</scm>
 
 	<modules>
-		<module>../nutritional.uiclient.basic</module>
+		<module>../nutritional.client</module>
 	</modules>
 
 	<repositories>
